apps/my-react-app-3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-react-app-3
  labels:
    app.kubernetes.io/name: my-react-app-3
    app.kubernetes.io/managed-by: tinycloud
    tinycloud.io/managed-by: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: my-react-app-3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: my-react-app-3
        tinycloud.io/managed-by: platform
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: my-react-app-3
          image: ghcr.io/sasirulk/tinycloud-demo-react:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
