apps/my-react-app-3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-react-app-3
  labels:
    app.kubernetes.io/name: my-react-app-3
    tinycloud.io/managed-by: platform
spec:
  selector:
    app.kubernetes.io/name: my-react-app-3
  ports:
    - port: 80
      targetPort: http
      name: http
